--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.4"
   },
   "name": "devcamper-node-api",
@@ -12,7 +13,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production node server",
+    "start": "cross-env NODE_ENV=production node server",
     "dev": "nodemon server"
   },
   "author": "Alexis",
