--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.3",
+    "node-geocoder": "^4.3.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
