--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
     "mongoose": "^8.4.3",
     "node-geocoder": "^4.3.0",
     "slugify": "^1.6.6"
