--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "node-geocoder": "^4.3.0",
+    "nodemailer": "^6.9.14",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
