--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
     "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.3.1",
     "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "node-geocoder": "^4.3.0",
